ampliación de contenido

--- a/src/blog.html
+++ b/src/blog.html
@@ -65,6 +65,12 @@
               <p>
                 Ya tenemos algunos artistas con fechas concretas pero seguimos en negociaciones con otros más a falta de concretar fechas libres tanto en nuestro calendario como en su agenda. En cuanto se concreten esas fechas pondremos a disposición la venta de entradas de sus conciertos.
               </p>
+              <p>
+                Nuestro festival tiene un componente social ya que destinaremos parte de lo recaudado en la venta de entradas a causas sociales ya que creemos que en estos tiempos dificiles de COVID es necesario ser solidarios con nuestros vecinos.
+              </p>
+              <p>
+                Podrás relizar donaciones a través de la compra de entradas en la fila 0.
+              </p>
           </div>
           </div>
         </section>
