--- a/src/blog.html
+++ b/src/blog.html
@@ -113,12 +113,16 @@
           <div >
              <img src="assets/images/playaChiclana.jpg" hspace="5" vspace="5"
              class="imagen-flotante"  />
-
-             En un entorno espectacular como son las playas de Chiclana podremos disfrutar de los mejores conciertos y del mejor ambiente que podrás encontrar este verano en la provincia de Cádiz.
-             No solo podras disfrutar de nuestros eventos sino de todo lo que te ofrece tanto nuestra ciudad como el entorno en el que se cuentra.
+            <p>
+             En un entorno espectacular como son las playas de Chiclana podremos disfrutar de los mejores conciertos y del mejor ambiente que podrás encontrar este verano en la provincia de Cádiz. No solo podras disfrutar de nuestros eventos sino de todo lo que te ofrece tanto nuestra ciudad como el entorno en el que se cuentra.
+            </p>
+            <p>
              Visita nuestro centro histórico de la ciudad, nuestros parques naturales y nuestras playas, que se encuentran entre las mejores del litoral español.
              No pierdas la oportunidad de visitar tambien las bodegas del famoso vino de chiclana así como disfrutar de la gastronomía local.
+            </p>
+            <p>
              Podras contratar diferentes excursiones y actividades que completarán tu visita a nuestra localidad. En nuestras instalaciones podrás encontras toda la información que necesites sobre donde se realizan, como se contratan y la gran oferta que cubren que van desde paracaidismo, vuelo a motor, rutas en kayack, alquiler de veleros, alquiler de motos acuaticas, rutas en caballo tanto en la playa como en la sierra y un largo etcetera para hacer  tus dias inolvidables.
+            </p>
 
             </div>
         </section>
