--- a/src/galeria.html
+++ b/src/galeria.html
@@ -12,7 +12,9 @@
       <div class="item-1">
         <section class="menu-superior">
           <div class="menu-superior-1">
-            <img class ="logo" src="assets/images/logoFest.png" alt="Logo festival">
+            <a href="index.html">
+              <img class ="logo" src="assets/images/logoFest.png" alt="Logo festival">
+            </a>
           </div>
           <div class="menu-superior-2">
             <a href="bands.html">Bandas</a>
@@ -91,16 +93,16 @@
               <img class ="logo" src="assets/images/logoFest.png" alt="Logo festival">
           </div>
           <div class="menu-inferior-2">
-            <a href="#">Home</a>
+            <a href="index.html">Home</a>
           </div>
           <div class="menu-inferior-3">
-            <a href="#">Bandas</a>
+            <a href="bands.html">Bandas</a>
           </div>
           <div class="menu-inferior-4">
-            <a href="#">Blog</a>
+            <a href="blog.html">Blog</a>
           </div>
           <div class="menu-inferior-5">
-            <a href="#">Galería</a>
+            <a href="galeria.html">Galería</a>
           </div>
           <div class="menu-inferior-6">
             <i class="fab fa-google-plus-g"></i>
