--- a/src/bands.html
+++ b/src/bands.html
@@ -12,7 +12,9 @@
       <div class="item-1">
         <section class="menu-superior">
           <div class="menu-superior-1">
-            <img class ="logo" src="assets/images/logoFest.png" alt="Logo festival">
+            <a href="index.html">
+              <img class ="logo" src="assets/images/logoFest.png" alt="Logo festival">
+            </a>
           </div>
           <div class="menu-superior-2">
             <a href="bands.html">Bandas</a>
@@ -131,7 +133,7 @@
               <img class ="logo" src="assets/images/logoFest.png" alt="Logo festival">
           </div>
           <div class="menu-inferior-2">
-            <a href="#">Home</a>
+            <a href="index.html">Home</a>
           </div>
           <div class="menu-inferior-3">
             <a href="#">Bandas</a>
