--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,9 @@
       <div class="item-1">
         <section class="menu-superior">
           <div class="menu-superior-1">
-            <img class ="logo" src="assets/images/logoFest.png" alt="Logo festival">
+            <a href="index.html">
+              <img class ="logo" src="assets/images/logoFest.png" alt="Logo festival">
+            </a>
           </div>
           <div class="menu-superior-2">
             <a href="bands.html">Bandas</a>
