--- a/src/blog.html
+++ b/src/blog.html
@@ -38,13 +38,13 @@
               </ol>
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img class="d-block w-100" src="assets/images/people-in-festival.jpg" alt="Personas en festival">
+                  <img class="d-block imagen-carrusel" src="assets/images/people-in-festival.jpg" alt="Personas en festival">
                 </div>
                 <div class="carousel-item">
-                  <img class="d-block w-100" src="assets/images/rock-band-silhouettes-on-stage-at-concert.jpg" alt="Banda de rock en el escenario">
+                  <img class="d-block imagen-carrusel" src="assets/images/rock-band-silhouettes-on-stage-at-concert.jpg" alt="Banda de rock en el escenario">
                 </div>
                 <div class="carousel-item">
-                  <img class="d-block w-100" src="assets/images/young-woman-enjoying-with-holi-color-in-the-crowd.jpg" alt="Fiesta con polvos de colores">
+                  <img class="d-block imagen-carrusel" src="assets/images/young-woman-enjoying-with-holi-color-in-the-crowd.jpg" alt="Fiesta con polvos de colores">
                 </div>
               </div>
               <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
